adicioando elementos estáticos na ul

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,25 @@
         <li>
             <img src="https://avatars0.githubusercontent.com/u/28929274?v=4" alt="Logo da Rockeseat" />
             <strong> Rockeseat </strong>
+            <p> Tire a sua ideia do papel e dê á vida a sua startup.</p>
+            <a href="http://github.com/rockeseat/rockeseat.com.br" target="_blank"> Acessar </a>
+        </li>
+
+        <li>
+            <img src="https://avatars0.githubusercontent.com/u/28929274?v=4" alt="Logo da Rockeseat" />
+            <strong> Rockeseat </strong>
+            <p> Tire a sua ideia do papel e dê á vida a sua startup.</p>
+            <a href="http://github.com/rockeseat/rockeseat.com.br" target="_blank"> Acessar </a>
+        </li>
+
+        <li>
+            <img src="https://avatars0.githubusercontent.com/u/28929274?v=4" alt="Logo da Rockeseat" />
+            <strong> Rockeseat </strong>
+            <p> Tire a sua ideia do papel e dê á vida a sua startup.</p>
+            <a href="http://github.com/rockeseat/rockeseat.com.br" target="_blank"> Acessar </a>
         </li>
     </ul>
+
+    <script src="../src/main.js"></script>
 </body>
 </html>
