--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Busca Api</title>
 </head>
 <body>
-    <form>
+    <form id="repo-form">
         <input type="text" name="repository" />
         <button type="submit">Adicionar</button>
     </form>
