Recuperando pastas excluidas

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Busca Api</title>
 </head>
 <body>
-    <form>
+    <form id="repo-form">
         <input type="text" name="repository" />
         <button type="submit">Adicionar</button>
     </form>
@@ -16,6 +16,6 @@
        
     </ul>
 
-    <script src="../scripts.js"></script>
+    <script src="../bundle.js"></script>
 </body>
 </html>
